--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@ W przypadku badań w znieczuleniu dożylnym/ogólnym nie wolno jeść ani pić 4
 
 
 							<div class="span8">
-
+							<iframe width="600" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=Pracownia%20Endoskopowa%2C%20Gastroskopia%2C%20Kolonoskopia%2C%20Ludwika%20Czajewicza%2C%20Piaseczno%2C%20Poland&key=AIzaSyDSj_wG6A7f47ZfUlDkzvyijp_-3HPzMWY"></iframe>
 								<div class="row-fluid">
 									<div class="span12">
 									</div><!-- /span12 -->
