--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-9622,50<!DOCTYPE HTML>
+<!DOCTYPE HTML>
 <html>
 	<head>
 		<title>Flat & Scroll - Multipurpose One Page</title>
@@ -49,9 +49,7 @@
 
 					<div class="container-fluid">
 						<div class="row-fluid">
-							<div id="logo">
-								<img src="img/logo.png" alt="">
-							</div>
+
 						</div>
 					</div>
 
@@ -64,7 +62,7 @@
 									 Prywatna Praktyka Lekarska</h1>
 								</hgroup>
 								<button class="btn-inverse" data-section="2">
-									Learn <span>More</span>
+									<span>Więcej</span>
 									<i class="icon-circle-arrow-down"></i>
 								</button>
 							</div><!-- /span6 -->
@@ -277,9 +275,9 @@ W przypadku badań w znieczuleniu dożylnym/ogólnym nie wolno jeść ani pić 4
 					<div class="container-fluid">
 						<div class="row-fluid">
 							<div class="span12">
-								<h2>ESTTT</h2>
-								<h4><bold>@Basicoh_</bold>: It is time to enjoy this amazing theme. Flat & Scroll</h4>
-								<p><bold> May 20, 2013</bold></p>
+								<h2>Kontakt</h2>
+								<h4> 22 735 00 37 lub 604 131 560</h4>
+								<p></p>
 							</div><!-- /span12 -->
 						</div><!-- /row-fluid -->
 					</div><!-- /container-fluid -->
@@ -318,41 +316,38 @@ W przypadku badań w znieczuleniu dożylnym/ogólnym nie wolno jeść ani pić 4
 
 				<section class="section" id="section5" data-section="5">
 					<div class="container-fluid">
-						<div class="row-fluid title">
-							<div class="span4">
-								<h2>Jak trafić do Pracowni Endoskopowej</h2>
+
+							<div class="span6">
+									<h3>Jak trafić do Pracowni Endoskopowej</h3>
+									<div>Zapisy</BR>
+										(telefonicznie lub osobiście w rejstracji)
+											</div>
+
+											<BR><BR>
+											<div>Telefon:</div>
+
+											<h5><B>22 735 00 37 lub 604 131 560<B><h5>
+
 							</div><!-- /span4 -->
-							<div class="span8 hidden-phone alt">
 
-							</div><!-- /span8 -->
-						</div><!-- /row-fluid -->
-						<div class="row-fluid content">
 							<div class="span4">
-								<h4 class="intro">MAPA
-								</h4>
-								<p><B><h5>ZAPISY<h5> telefonicznie lub osobiście w rejstracji<B></p>
-								<div class="row-fluid alt">
 
 
-								</div><!-- /row -->
-								<div class="row-fluid alt">
-									<h5>TELEFON:</h5>
-									<h5><B>22 735 00 37 lub 604 131 560<B><h5>
-								</div><!-- /row -->
-								<div class="row-fluid alt">
+								<iframe width="600" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=Pracownia%20Endoskopowa%2C%20Gastroskopia%2C%20Kolonoskopia%2C%20Ludwika%20Czajewicza%2C%20Piaseczno%2C%20Poland&key=AIzaSyDSj_wG6A7f47ZfUlDkzvyijp_-3HPzMWY"></iframe>
+								<BR><BR><BR><BR><BR><BR>
+							</div>
 
 
-							<div class="span8">
-							<iframe width="600" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=Pracownia%20Endoskopowa%2C%20Gastroskopia%2C%20Kolonoskopia%2C%20Ludwika%20Czajewicza%2C%20Piaseczno%2C%20Poland&key=AIzaSyDSj_wG6A7f47ZfUlDkzvyijp_-3HPzMWY"></iframe>
-								<div class="row-fluid">
-									<div class="span12">
-									</div><!-- /span12 -->
-								</div><!-- /row-fluid -->
 
 
-								<!-- Tu miejsce na mape -->
 
-						</div><!-- /span8 -->
+
+					</div>
+
+				</section>
+
+
+
 
 						<div id="footer">
 							<div class="row-fluid">
