--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@ W przypadku badań w znieczuleniu dożylnym/ogólnym nie wolno jeść ani pić 4
 
 				<section class="section" id="section5" data-section="5">
 					<div class="container-fluid">
-
+						<div class="row-fluid">
 							<div class="span6">
 									<h3>Jak trafić do Pracowni Endoskopowej</h3>
 									<div>Zapisy</BR>
@@ -336,7 +336,7 @@ W przypadku badań w znieczuleniu dożylnym/ogólnym nie wolno jeść ani pić 4
 								<iframe width="600" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=Pracownia%20Endoskopowa%2C%20Gastroskopia%2C%20Kolonoskopia%2C%20Ludwika%20Czajewicza%2C%20Piaseczno%2C%20Poland&key=AIzaSyDSj_wG6A7f47ZfUlDkzvyijp_-3HPzMWY"></iframe>
 								<BR><BR><BR><BR><BR><BR>
 							</div>
-
+						</div>
 
 
 
