--- a/index.html
+++ b/index.html
@@ -315,52 +315,108 @@ W przypadku badań w znieczuleniu dożylnym/ogólnym nie wolno jeść ani pić 4
 
 
 				<section class="section" id="section5" data-section="5">
-					<div class="container-fluid">
-						<div class="row-fluid">
-							<div class="span6">
-									<h3>Jak trafić do Pracowni Endoskopowej</h3>
-									<div>Zapisy</BR>
-										(telefonicznie lub osobiście w rejstracji)
-											</div>
 
-											<BR><BR>
-											<div>Telefon:</div>
+<div class="container-fluid">
 
-											<h5><B>22 735 00 37 lub 604 131 560<B><h5>
+<div class="row-fluid title">
 
-							</div><!-- /span4 -->
+<div class="span4">
 
-							<div class="span4">
+<h2>Jak trafić do Pracowni Endoskopowej</h2>
 
+</div><!-- /span4 -->
 
-								<iframe width="600" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=Pracownia%20Endoskopowa%2C%20Gastroskopia%2C%20Kolonoskopia%2C%20Ludwika%20Czajewicza%2C%20Piaseczno%2C%20Poland&key=AIzaSyDSj_wG6A7f47ZfUlDkzvyijp_-3HPzMWY"></iframe>
-								<BR><BR><BR><BR><BR><BR>
-							</div>
-						</div>
+<div class="span8 hidden-phone alt">
 
 
 
+</div><!-- /span8 -->
+
+</div><!-- /row-fluid -->
+
+<div class="row-fluid content">
+
+<div class="span4">
+
+<h4 class="intro">MAPA
+
+</h4>
+
+<p><B><h5>ZAPISY<h5> telefonicznie lub osobiście w rejstracji<B></p>
+
+<div class="row-fluid alt">
 
 
-					</div>
-
-				</section>
 
 
 
+</div><!-- /row -->
 
-						<div id="footer">
-							<div class="row-fluid">
-								<div class="span12">
+<div class="row-fluid alt">
 
-								</div><!-- /span12 -->
-							</div><!-- /row-fluid -->
-						</div><!-- /footer -->
-					</div><!-- /row-fluid -->
-				</div><!-- /container-fluid -->
+<h5>TELEFON:</h5>
 
-			</div><!-- /container -->
-		</div><!-- /wrapper -->
+<h5><B>22 735 00 37 lub 604 131 560<B><h5>
+
+</div><!-- /row -->
+
+<div class="row-fluid alt">
+
+
+
+
+
+<div class="span8">
+
+
+
+<div class="row-fluid">
+
+<div class="span12">
+	<iframe width="600" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=Pracownia%20Endoskopowa%2C%20Gastroskopia%2C%20Kolonoskopia%2C%20Ludwika%20Czajewicza%2C%20Piaseczno%2C%20Poland&key=AIzaSyDSj_wG6A7f47ZfUlDkzvyijp_-3HPzMWY"></iframe>
+								
+
+</div><!-- /span12 -->
+
+</div><!-- /row-fluid -->
+
+
+
+
+
+<!-- Tu miejsce na mape -->
+
+
+
+</div><!-- /span8 -->
+
+
+
+<div id="footer">
+
+<div class="row-fluid">
+
+<div class="span12">
+
+
+
+</div><!-- /span12 -->
+
+</div><!-- /row-fluid -->
+
+</div><!-- /footer -->
+
+</div><!-- /row-fluid -->
+
+</div><!-- /container-fluid -->
+
+
+
+</div><!-- /container -->
+
+</div><!-- /wrapper -->
+
+
 
 		<!-- JAVASCRIPTS -->
 		<script type="text/javascript" src="js/waypoints.min.js"></script>
