--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@ W przypadku badań w znieczuleniu dożylnym/ogólnym nie wolno jeść ani pić 4
 				<section class="section" id="section5" data-section="5">
 					<div class="container-fluid">
 						<div class="row-fluid">
-							<div class="span6">
+							<div>
 									<h3>Jak trafić do Pracowni Endoskopowej</h3>
 									<div>Zapisy</BR>
 										(telefonicznie lub osobiście w rejstracji)
