--- a/index.html
+++ b/index.html
@@ -316,35 +316,43 @@ W przypadku badań w znieczuleniu dożylnym/ogólnym nie wolno jeść ani pić 4
 
 				<section class="section" id="section5" data-section="5">
 					<div class="container-fluid">
-						<div class="row-fluid">
-							<div>
-									<h3>Jak trafić do Pracowni Endoskopowej</h3>
-									<div>Zapisy</BR>
-										(telefonicznie lub osobiście w rejstracji)
-											</div>
 
-											<BR><BR>
-											<div>Telefon:</div>
 
-											<h5><B>22 735 00 37 lub 604 131 560<B><h5>
-
-							</div><!-- /span4 -->
-
-							<div class="span4">
 
 
 								<iframe  frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=Pracownia%20Endoskopowa%2C%20Gastroskopia%2C%20Kolonoskopia%2C%20Ludwika%20Czajewicza%2C%20Piaseczno%2C%20Poland&key=AIzaSyDSj_wG6A7f47ZfUlDkzvyijp_-3HPzMWY"></iframe>
-								<BR><BR><BR><BR><BR><BR>
-							</div>
-						</div>
+
+
+								<h3>Jak trafić do Pracowni Endoskopowej</h3>
+								<div>Zapisy</BR>
+									(telefonicznie lub osobiście w rejstracji)
+										</div>
+
+										<BR><BR>
+										<div>Telefon:</div>
+
+										<h5><B>22 735 00 37 lub 604 131 560<B><h5>
+
+						<div class="row-fluid desc">
+							<div class="span8">
+										</div><!-- /span8 -->
+						</div><!-- /row-fluid -->
 
 
 
 
 
-					</div>
 
-				</section>
+
+
+
+						</div><!-- /row-fluid -->
+					</div><!-- /container -->
+				</section><!-- /section -->
+
+
+
+
 
 
 
