--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 							<div class="span12 intro">
 								<hgroup>
-									<h2>Dr Witold Kucharski
+									<h2>Dr n.med. Witold Kucharski
 									 Prywatna Praktyka Lekarska</h2>
 								</hgroup>
 								<button class="btn-inverse" data-section="2">
