--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 										<p><b>Chirurgia Ogólna i Proktologia</b></p>
 										<ul>
 							                <li>Kosmetyczne usuwanie zmian skórnych</li>
-							                <li>Chirurgia Paznokcia</li>
+							                <li>Chirurgia paznokcia</li>
 							                <li>Operacyjne i nieoperacyjne leczenie chorób układu żylnego (żylaki, pajączki żylne, żylna choroba zakrzepowo-zatorowa, owrzodzenia podudzi)</li>
 							                <li>Operacyjne leczenie przepuklin</li>
 															<li>Operacyjne leczenie chorób odbytu</li>
