--- a/index.html
+++ b/index.html
@@ -326,12 +326,12 @@ W przypadku badań w znieczuleniu dożylnym/ogólnym nie wolno jeść ani pić 4
 
 								<BR>Jak trafić do Pracowni Endoskopowej</BR>
 								<BR>Adres: 05-500 Piaseczno ul. Ludwika Czajewicza 5/7 wejście D</BR>
-								Zapisy</BR>
+								<BR>Zapisy</BR>
 									(telefonicznie lub osobiście w rejstracji)
 
 
 										<BR><BR>
-										<div>Telefon:</div>
+										<div>Telefony:</div>
 
 										<B>22 735 00 37 lub 604 131 560<B>
 										</div>
