--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@ W przypadku badań w znieczuleniu dożylnym/ogólnym nie wolno jeść ani pić 4
 								<div class="container-fluid">
 									<iframe  frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=Pracownia%20Endoskopowa%2C%20Gastroskopia%2C%20Kolonoskopia%2C%20Ludwika%20Czajewicza%2C%20Piaseczno%2C%20Poland&key=AIzaSyDSj_wG6A7f47ZfUlDkzvyijp_-3HPzMWY"></iframe>
 
-								Jak trafić do Pracowni Endoskopowej?
+								<BR>Jak trafić do Pracowni Endoskopowej?
 								<BR>Adres: 05-500 Piaseczno ul. Ludwika Czajewicza 5/7 wejście D</BR>
 								<BR>Zapisy</BR>
 									(telefonicznie lub osobiście w rejstracji)
