--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@ W przypadku badań w znieczuleniu dożylnym/ogólnym nie wolno jeść ani pić 4
 								<BR>Jak trafić do Pracowni Endoskopowej?
 								<BR>Adres: 05-500 Piaseczno ul. L.Czajewicza 5/7 wejście D</BR>
 								<BR>Zapisy</BR>
-									(telefonicznie lub osobiście w rejstracji)
+									(telefonicznie lub osobiście w recepcji)
 
 
 									
