--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Flat & Scroll - Multipurpose One Page</title>
+		<title>Dr Kucharski, Prywatna Praktyka Lekarska</title>
 		<meta name="description" content="">
 		<meta name="author" content="" >
 		<meta charset="utf-8">
@@ -58,8 +58,8 @@
 
 							<div class="span12 intro">
 								<hgroup>
-									<h2>Dr n.med. Witold Kucharski
-									 </h2>
+									<h1>Dr n.med. Witold Kucharski
+									 </h1>
 								</hgroup>
 								<button class="btn-inverse" data-section="2">
 									<span>Więcej</span>
