--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 							<div class="span12 intro">
 								<hgroup>
-									<h1>Dr n.med. Witold Kucharski
+									<h1>Dr Witold Kucharski
 									 </h1>
 								</hgroup>
 								<button class="btn-inverse" data-section="2">
@@ -75,8 +75,8 @@
 					<div class="container-fluid">
 						<div class="row-fluid">
 							<div class="span12">
-								<h2>Pracownia Endoskopowa Centrum Zdrowia</h2>
-									  05-500 Piaseczno ul.Czajewicza 5/7 wejście D</h2>
+								<h3>Pracownia Endoskopowa Centrum Zdrowia</h3>
+									 <h3>> 05-500 Piaseczno ul.Czajewicza 5/7 wejście D</h3>
 							</div>
 						</div>
 
