--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 						<div class="row-fluid">
 							<div class="span12">
 								<h3>Pracownia Endoskopowa Centrum Zdrowia</h3>
-									 <h3>> 05-500 Piaseczno ul.Czajewicza 5/7 wejście D</h3>
+									 <h3> 05-500 Piaseczno ul.Czajewicza 5/7 wejście D</h3>
 							</div>
 						</div>
 
