--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
 						<div class="row-fluid desc">
 							<div class="span8">
-								
+
 							</div><!-- /span8 -->
 						</div><!-- /row-fluid -->
 
@@ -169,58 +169,67 @@
 				<section class="section" id="section6" data-section="6">
 					<div class="container-fluid">
 
-						<div class="row-fluid title">
-							<div class="span4">
-								<h4>Sposób przygotowania do kolonoskopii</h4>
-							</div><!-- /span4 -->
 
-						</div><!-- /row-fluid -->
 
 
 
 						<div class="row-fluid">
 
+<h3>Sposób przygotowania do kolonoskopii</h3>
 
-																		<h4>Zasady Ogólne</h4>
-																		<p>Na badanie należy zabrać z sobą poprzednie wyniki badań endoskopowych, aktualne wyniki badań dodatkowych (w szczególności badanie morfologii krwi, INR, poziomy elektrolitów we krwi).
-Na tydzień przed badaniem należy przerwać przyjmowanie doustnych preparatów żelaza. Leki przyjmowane z powodu chorób układu krążenia (np. obniżające ciśnienie krwi, antyarytmiczne) należy przyjmować o zwykłych porach i w dotychczasowych dawkach (również w dniu badania popijając niewielkim łykiem wody).
-Nie należy odstawiać leków antyagregacyjnych ( np. acard, polocard, ticlopidyna, xarelto). Natomiast w przypadku przeciwkrzepliwych (acenokumarol, sintrom, warfaryna), wskazana jest konsultacja z lekarzem prowadzącym i zastosowanie w razie potrzeby leczenia pomostowego – czasowej zamiany tych leków na heparynę drobnocząsteczkową.
-W przypadku cukrzycy także wymagana jest konsultacja z lekarzem prowadzącym. Badanie u chorych z cukrzycą insulinozależną najlepiej przeprowadzić w godzinach rannych.
-Na trzy dni przed planowanym zabiegiem endoskopowym nie należy spożywać owoców pestkowych (winogron, kiwi), jak również siemienia lnianego.
+<h4>Zasady Ogólne</h4>
+<p>Na badanie należy zabrać z sobą poprzednie wyniki badań endoskopowych, aktualne wyniki badań dodatkowych (w szczególności badanie morfologii krwi, INR, poziomy elektrolitów we krwi).
 </p>
 
-															<h4>Citrafleet</h4>
-			                               <p>
+<UL>
+	<LI>Na tydzień przed badaniem należy przerwać przyjmowanie doustnych preparatów żelaza.</LI>
+
+
+<LI>Leki przyjmowane z powodu chorób układu krążenia (np. obniżające ciśnienie krwi, antyarytmiczne) należy przyjmować o zwykłych porach i w dotychczasowych dawkach (również w dniu badania popijając niewielkim łykiem wody).</LI>
+
+<LI>Nie należy odstawiać leków antyagregacyjnych ( np. acard, polocard, ticlopidyna, xarelto). Natomiast w przypadku przeciwkrzepliwych (acenokumarol, sintrom, warfaryna), wskazana jest konsultacja z lekarzem prowadzącym i zastosowanie w razie potrzeby leczenia pomostowego – czasowej zamiany tych leków na heparynę drobnocząsteczkową.</LI>
+<LI>W przypadku cukrzycy także wymagana jest konsultacja z lekarzem prowadzącym. Badanie u chorych z cukrzycą insulinozależną najlepiej przeprowadzić w godzinach rannych.</LI>
+<LI>Na trzy dni przed planowanym zabiegiem endoskopowym nie należy spożywać owoców pestkowych (winogron, kiwi), jak również siemienia lnianego.</LI>
+</UL>
+</BR>
+<h4>Preparat Citrafleet</h4>
+
+<p>
 
 W dniu poprzedzającym badanie należy zjeść lekkie śniadanie, bez owoców, warzyw i pieczywa z ziarnami. Przez cały dzień poprzedzający badanie należy pić dużo klarownych płynów.
 Dawkowanie preparatu Citrafleet
-<B>I Dawka</B>
+</p>
+<h5>I Dawka</h5>
 Pierwszą dawkę należy przyjąć pomiędzy godziną 20.00 a 22.00 w dniu poprzedzającym badanie. Należy wsypać zawartość saszetki do około 150 ml zimnej wody i wymieszać. Po wypiciu przygotowanego preparatu, dodatkowo trzeba wypić jeszcze 2 litry klarownych płynów.
-
-<B>II Dawka</B>
+</BR></BR>
+<h5>II Dawka</h5>
 Jeśli badanie planowane jest do godziny 15.00, to kolejną porcję leku należy wypić koło godziny 4.00-5.00 rano (w dniu kolonoskopii), przygotowując ją jak dawkę wieczorną. Potem trzeba wypić jeszcze kolejne dwa litry klarownych płynów.
+</BR></BR>
 Uwaga: Bez wypicia w sumie mniej jak 4 litry płynów istnieje bardzo duże ryzyko złego oczyszczenia jelita.
 Jeśli badanie planowane jest w godzinach popołudniowych, po 15.00  drugą dawkę preparatu i dwa litry płynów należy wypić około godziny 9-10 rano w dniu badania.
-
+</BR></BR>
 Uwaga: W razie uczucia pragnienia nie należy ograniczać ilości spożywanych klarownych płynów zarówno w przeddzień jak i  w dniu badania. W przypadku nudności należy spowolnić przyjmowanie płynów.
 
-</p>
+</BR></BR>
 <B>
 Bardzo ważne:
 W przypadku badań w znieczuleniu dożylnym/ogólnym nie wolno jeść ani pić 4 godziny przed badaniem.
 </B>
+</BR></BR>
 
-																				<h4>Fortrans</h4>
-																					<p>
-																						W dniu poprzedzającym badanie należy zjeść lekkie śniadanie, bez owoców, warzyw i pieczywa z ziarnami. Przez cały dzień poprzedzający badanie należy pić dużo klarownych płynów.
 
-																						<B>I Dawka</B>
+<h4>Preparat Fortrans</h4>
+	<p>
+		W dniu poprzedzającym badanie należy zjeść lekkie śniadanie, bez owoców, warzyw i pieczywa z ziarnami. Przez cały dzień poprzedzający badanie należy pić dużo klarownych płynów.
+
+		<h5>I Dawka</h5>
 Od godziny 20.00 należy rozpocząć picie pierwszej dawki, 2 litrów przygotowanego preparatu (każdą torebkę FORTRANSU rozpuścić kolejno w 1 litrze przegotowanej lub niegazowanej wody).
-<B>II Dawka</B>- kolejne dwa litry roztworu Fortransu)
+</BR></BR>
+<h5>II Dawka</h5> (Kolejne dwa litry roztworu Fortransu)</BR></BR>
 Jeśli badanie planowane jest do godziny 15.00, to kolejną porcję dwóch litrów należy wypić koło godziny 4.00-5.00 rano ( w dniu kolonoskopii), przygotowując ją jak dawkę wieczorną.
 
 Jeśli badanie planowane jest w godzinach popołudniowych, po 16.00  drugą dawkę preparatu, dwie saszetki rozpuszczone w dwóch litrach płynów,  należy wypić około godziny 9 rano w dniu badania.
-
+</BR></BR>
 Uwaga: W razie uczucia pragnienia nie należy ograniczać ilości spożywanych klarownych płynów zarówno w przeddzień jak i  w dniu badania. W przypadku nudności należy spowolnić przyjmowanie płynów.
 
 </p>
@@ -228,7 +237,8 @@ Uwaga: W razie uczucia pragnienia nie należy ograniczać ilości spożywanych k
 Bardzo ważne:
 W przypadku badań w znieczuleniu dożylnym/ogólnym nie wolno jeść ani pić 4 godziny przed badaniem.
 </B>
-<h4>Eziclen</h4>
+</BR></BR>
+<h4>Preparat Eziclen</h4>
 				<B>Przeddzień badania:</B>
 			</BR></BR>
 
@@ -261,7 +271,7 @@ Uwaga: W razie uczucia pragnienia nie należy ograniczać ilości spożywanych k
 Bardzo ważne:
 W przypadku badań w znieczuleniu dożylnym/ogólnym nie wolno jeść ani pić 4 godziny przed badaniem.
 </B>
-
+</BR></BR>
 <h4>Sposób przygotowania do gastroskopii</h4>
 
 <p>Na badanie należy zabrać z sobą poprzednie wyniki badań endoskopowych. Należy być na czczo (6 godnin przed badaniem bez jedzenia i bez picia)
@@ -330,7 +340,7 @@ W przypadku badań w znieczuleniu dożylnym/ogólnym nie wolno jeść ani pić 4
 									(telefonicznie lub osobiście w recepcji)
 
 
-									
+
 										<div>Telefony:</div>
 
 										<B>22 735 00 37 lub 604 131 560<B>
