--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
 				<nav id="nav" class="navigation" role="navigation">
 					<ul class="unstyled">
 						<li class="active" data-section="1"><i class="icon-home"></i> <span>Home</span></li>
-						<li data-section="2" class=""><i class="icon-rocket"></i> <span>Services</span></li>
-						<li data-section="6" class=""><i class="icon-money"></i> <span>Price</span></li>
-						<li data-section="4" class=""><i class="icon-pencil"></i> <span>Team</span></li>
-						<li data-section="5" class="last"><i class="icon-envelope"></i> <span>Contact</span></li>
+						<li data-section="2" class=""><i class="icon-list"></i> <span>Usługi</span></li>
+						<li data-section="6" class=""><i class="icon-heart"></i> <span>Endo</span></li>
+						<li data-section="4" class=""><i class="icon-info-sign"></i> <span>O mnie</span></li>
+						<li data-section="5" class="last"><i class="icon-phone"></i> <span>Kontakt</span></li>
 					</ul>
 				</nav><!-- /nav -->
 			</div><!-- /sidebar -->
@@ -58,7 +58,9 @@
 
 							<div class="span12 intro">
 								<hgroup>
-									<h1>Dr Witold Kucharski
+									<h1>
+										Prywatna Praktyka Lekarska</BR>
+										Dr Witold Kucharski
 									 </h1>
 								</hgroup>
 								<button class="btn-inverse" data-section="2">
@@ -299,7 +301,13 @@ W przypadku badań w znieczuleniu dożylnym/ogólnym nie wolno jeść ani pić 4
 
 
 								<h4>Dr n. med. Witold Kucharski</h4>
-								<p>Dr n. med. Witold Kucharski jest absolwentem Wydziału Lekarskiego Warszawskiej Akademii Medycznej w 1982 roku. Przez 22 lata pracował w Klinice Chirurgicznej Instytutu Hematologii i Transfuzjologii ostatnio na stanowisku Kierownika Oddziału Męskiego. Swoje umiejętności chirurgiczne doskonalił w oparciu o doświadczenia najlepszych ośrodków krajowych i zagranicznych. Jest autorem 56 prac naukowych publikowanych w czasopismach krajowych i zagranicznych. Od 1996 roku pracuje samodzielnie w ramach Specjalistycznej Prywatnej Praktyki Lekarskiej. W 2005 roku stworzył we współpracy z Centrum Zdrowia, nowoczesną Pracownię Endoskopową zajmującą się badaniami diagnostycznymi i zabiegami endoskopowymi przewodu pokarmowego w trybie jednodniowym. Posiada Dyplomy Umiejętności wykonywania badań endoskopowych górnego i dolnego odcinka przewodu pokarmowego, wydane przez Polskie Towarzystwo Gastroenterologii, jak również Certyfikaty Zarządu Sekcji Chirurgii Endoskopowej Towarzystwa Chirurgów Polskich uprawniające do samodzielnego wykonywania procedur endoskopowych w zakresie endoskopii diagnostycznej i endoskopii terapeutycznej przewodu pokarmowego. Rocznie w Pracowni Endoskopowej wykonujemy około 2 tysięcy badań diagnostycznych i leczniczych.</p>
+								<p>Dr n. med. Witold Kucharski jest absolwentem Wydziału Lekarskiego Warszawskiej Akademii Medycznej w 1982 roku.
+								<p>	Przez 22 lata pracował w Klinice Chirurgicznej Instytutu Hematologii i Transfuzjologii ostatnio na stanowisku Kierownika Oddziału Męskiego.
+								</P>	Swoje umiejętności chirurgiczne doskonalił w oparciu o doświadczenia najlepszych ośrodków krajowych i zagranicznych.
+								<p>	Jest autorem 56 prac naukowych publikowanych w czasopismach krajowych i zagranicznych. Od 1996 roku pracuje samodzielnie w ramach Specjalistycznej Prywatnej Praktyki Lekarskiej.
+								</p>	W 2005 roku stworzył we współpracy z Centrum Zdrowia, nowoczesną Pracownię Endoskopową zajmującą się badaniami diagnostycznymi i zabiegami endoskopowymi przewodu pokarmowego w trybie jednodniowym.
+							</BR></BR>	<p>	Posiada Dyplomy Umiejętności wykonywania badań endoskopowych górnego i dolnego odcinka przewodu pokarmowego, wydane przez Polskie Towarzystwo Gastroenterologii, jak również Certyfikaty Zarządu Sekcji Chirurgii Endoskopowej Towarzystwa Chirurgów Polskich uprawniające do samodzielnego wykonywania procedur endoskopowych w zakresie endoskopii diagnostycznej i endoskopii terapeutycznej przewodu pokarmowego.
+								</p>	Rocznie w Pracowni Endoskopowej wykonujemy około 2 tysięcy badań diagnostycznych i leczniczych.</p>
 
 
 
