--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 							<div class="span12">
 								<div class="row-fluid">
 									<div class="span4 service">
-										<p><img src="img/service_creative.png" alt=""></p>
+										<p><img src="img/endoskopia.jpg" alt=""></p>
 										<p><b>Zabiegi Endoskopowe</b></p>
 										<ul>
 							                <li>Kolonoskopia</li>
@@ -124,7 +124,7 @@
 									</div>
 
 									<div class="span4 service">
-										<p><img src="img/service_development.png" alt=""></p>
+										<p><img src="img/operacja.jpg" alt=""></p>
 										<p><b>Chirurgia Ogólna i Proktologia</b></p>
 										<ul>
 							                <li>Kosmetyczne usuwanie zmian skórnych</li>
@@ -137,7 +137,7 @@
 									</div>
 
 									<div class="span4 service">
-										<p><img src="img/service_production.png" alt=""></p>
+										<p><img src="img/konsultacje.jpg" alt=""></p>
 										<p><b>Konsultacje Lekarskie</b></p>
 										<ul>
 							                <li>Porady proktologiczne</li>
