--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 										<ul>
 							                <li>Porady proktologiczne</li>
 							                <li>Choroby przewodu pokarmowego</li>
-							                <li>Problemy chiruriczne i naczyniowe w okresie ciąży</li>
+							                <li>Problemy chirurgiczne i naczyniowe w okresie ciąży</li>
 							                <li>Kwalifikacja do zabiegów chirurgicznych i zabiegów endoskopowych</li>
 							            </ul>
 							            <br>
