--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 
 <LI>Leki przyjmowane z powodu chorób układu krążenia (np. obniżające ciśnienie krwi, antyarytmiczne) należy przyjmować o zwykłych porach i w dotychczasowych dawkach (również w dniu badania popijając niewielkim łykiem wody).</LI>
 
-<LI>Nie należy odstawiać leków antyagregacyjnych ( np. acard, polocard, ticlopidyna, xarelto). Natomiast w przypadku przeciwkrzepliwych (acenokumarol, sintrom, warfaryna), wskazana jest konsultacja z lekarzem prowadzącym i zastosowanie w razie potrzeby leczenia pomostowego – czasowej zamiany tych leków na heparynę drobnocząsteczkową.</LI>
+<LI>Nie należy odstawiać leków antyagregacyjnych ( np. acard, polocard, ticlopidyna, xarelto). Natomiast w przypadku przeciwkrzepliwych (acenokumarol, sintrom, warfaryna), wskazana jest konsultacja z lekarzem prowadzącym i zastosowanie w razie potrzeby leczenia pomostowego – czasowej zamiany tych leków na heparynę drobnocząsteczkową. W przypadku doustnych antykoagulantów nie będących antagonistami witaminy K (Xarelto, Pradaxa, Eliquis) - Ostatnią dawkę leku przyjmujemy 48 godzin przed badaniem o ile nie ma innych zaleceń lekarza prowadzącego/kardiologa. W tym przypadku nie stosuje się terapii pomostowej heparyną drobnocząsteczkową. </LI>
 <LI>W przypadku cukrzycy także wymagana jest konsultacja z lekarzem prowadzącym. Badanie u chorych z cukrzycą insulinozależną najlepiej przeprowadzić w godzinach rannych.</LI>
 <LI>Na trzy dni przed planowanym zabiegiem endoskopowym nie należy spożywać owoców pestkowych (winogron, kiwi), jak również siemienia lnianego.</LI>
 </UL>
