--- a/index.html
+++ b/index.html
@@ -192,6 +192,8 @@
 <LI>Nie należy odstawiać leków antyagregacyjnych ( np. acard, polocard, ticlopidyna, xarelto). Natomiast w przypadku przeciwkrzepliwych (acenokumarol, sintrom, warfaryna), wskazana jest konsultacja z lekarzem prowadzącym i zastosowanie w razie potrzeby leczenia pomostowego – czasowej zamiany tych leków na heparynę drobnocząsteczkową. W przypadku doustnych antykoagulantów nie będących antagonistami witaminy K (Xarelto, Pradaxa, Eliquis) - Ostatnią dawkę leku przyjmujemy 48 godzin przed badaniem o ile nie ma innych zaleceń lekarza prowadzącego/kardiologa. W tym przypadku nie stosuje się terapii pomostowej heparyną drobnocząsteczkową. </LI>
 <LI>W przypadku cukrzycy także wymagana jest konsultacja z lekarzem prowadzącym. Badanie u chorych z cukrzycą insulinozależną najlepiej przeprowadzić w godzinach rannych.</LI>
 <LI>Na trzy dni przed planowanym zabiegiem endoskopowym nie należy spożywać owoców pestkowych (winogron, kiwi), jak również siemienia lnianego.</LI>
+<LI>W przypadku badań w znieczuleniu dożylnym nie wolno jeść i pić 4 godziny przed badaniem.</LI>
+<LI>JEŚLI BADANIE PRZEPROWADZONE JEST W ZNIECZULENIU TO NIE WOLNO PROWADZIĆ POJAZDÓW MECHANICZNYCH PRZEZ NASTĘPNE 12 GODZIN! Konieczna osoba towarzysząca przy powrocie do domu.<LI>	
 </UL>
 </BR>
 <h4>Preparat Citrafleet</h4>
