--- a/index.html
+++ b/index.html
@@ -193,8 +193,7 @@
 <LI>W przypadku cukrzycy także wymagana jest konsultacja z lekarzem prowadzącym. Badanie u chorych z cukrzycą insulinozależną najlepiej przeprowadzić w godzinach rannych.</LI>
 <LI>Na trzy dni przed planowanym zabiegiem endoskopowym nie należy spożywać owoców pestkowych (winogron, kiwi), jak również siemienia lnianego.</LI>
 <LI>W przypadku badań w znieczuleniu dożylnym nie wolno jeść i pić 4 godziny przed badaniem.</LI>
-</B>
-</B><LI>JEŚLI BADANIE PRZEPROWADZONE JEST W ZNIECZULENIU TO NIE WOLNO PROWADZIĆ POJAZDÓW MECHANICZNYCH PRZEZ NASTĘPNE 12 GODZIN! Konieczna osoba towarzysząca przy powrocie do domu.
+</B>JEŚLI BADANIE PRZEPROWADZONE JEST W ZNIECZULENIU TO NIE WOLNO PROWADZIĆ POJAZDÓW MECHANICZNYCH PRZEZ NASTĘPNE 12 GODZIN! Konieczna osoba towarzysząca przy powrocie do domu.
 </B>
 </p>
 </BR>
