--- a/index.html
+++ b/index.html
@@ -196,6 +196,32 @@
 <h3>JEŚLI BADANIE PRZEPROWADZONE JEST W ZNIECZULENIU TO NIE WOLNO PROWADZIĆ POJAZDÓW MECHANICZNYCH PRZEZ NASTĘPNE 12 GODZIN! Konieczna osoba towarzysząca przy powrocie do domu.<h3>
 </p>
 </BR>
+<h4>Preparat Clensia</h4>
+
+<p>
+
+W dniu poprzedzającym badanie należy zjeść lekkie śniadanie, bez owoców, warzyw i pieczywa z ziarnami. Przez cały dzień poprzedzający badanie należy pić dużo klarownych płynów.
+Dawkowanie preparatu Clensia
+</p>
+<h5>I Dawka</h5>
+Pierwszą dawkę należy przyjąć pomiędzy godziną 20.00 a 22.00 w dniu poprzedzającym badanie. Rozpuść dwie saszetki A i dwie saszetki saszetki B w 1 litrze wody niegazowanej. Wymieszaj do całkowitego rozpuszczenia proszku. Wypij cały wymieszany płyn w ciągu 60 minut ( jedna szklanka co 15 minut). Wypij dodatkowo 1 litr wody przez kolejne 60 minut.
+</BR></BR>
+<h5>II Dawka</h5>
+Jeśli badanie planowane jest do godziny 15.00, to kolejną porcję leku należy wypić koło godziny 4.00-5.00 rano (w dniu kolonoskopii), przygotowując ją jak dawkę wieczorną. Potem trzeba wypić jeszcze kolejne dwa litry klarownych płynów.
+</BR></BR>
+Uwaga: Bez wypicia w sumie mniej jak 4 litry płynów istnieje bardzo duże ryzyko złego oczyszczenia jelita.
+Jeśli badanie planowane jest w godzinach popołudniowych, po 15.00  drugą dawkę preparatu i dwa litry płynów należy wypić około godziny 9-10 rano w dniu badania.
+</BR></BR>
+Uwaga: W razie uczucia pragnienia nie należy ograniczać ilości spożywanych klarownych płynów zarówno w przeddzień jak i  w dniu badania. W przypadku nudności należy spowolnić przyjmowanie płynów.
+
+</BR></BR>
+</B>
+Bardzo ważne:
+W przypadku badań w znieczuleniu dożylnym/ogólnym nie wolno jeść ani pić 4 godziny przed badaniem.
+</B>
+</BR></BR>
+
+</BR>
 <h4>Preparat Citrafleet</h4>
 
 <p>
