--- a/index.html
+++ b/index.html
@@ -214,9 +214,7 @@ Jeśli badanie planowane jest w godzinach popołudniowych, po 15.00  drugą dawk
 Uwaga: W razie uczucia pragnienia nie należy ograniczać ilości spożywanych klarownych płynów zarówno w przeddzień jak i  w dniu badania. W przypadku nudności należy spowolnić przyjmowanie płynów.
 
 </B>
-Bardzo ważne:
-W przypadku badań w znieczuleniu dożylnym/ogólnym nie wolno jeść ani pić 4 godziny przed badaniem.
-</B>
+<B>Bardzo ważne: W przypadku badań w znieczuleniu dożylnym/ogólnym nie wolno jeść ani pić 4 godziny przed badaniem.</B>
 </BR></BR>
 
 </BR></BR>
