--- a/index.html
+++ b/index.html
@@ -211,11 +211,14 @@ Jeśli badanie planowane jest do godziny 15.00, to kolejną porcję leku należy
 </BR></BR>
 Jeśli badanie planowane jest w godzinach popołudniowych, po 15.00  drugą dawkę preparatu i dwa litry płynów należy wypić około godziny 9-10 rano w dniu badania.
 </BR></BR>
+</BR></BR>
 Uwaga: W razie uczucia pragnienia nie należy ograniczać ilości spożywanych klarownych płynów zarówno w przeddzień jak i  w dniu badania. W przypadku nudności należy spowolnić przyjmowanie płynów.
 
+</p>
+<B>
+Bardzo ważne:
+W przypadku badań w znieczuleniu dożylnym/ogólnym nie wolno jeść ani pić 4 godziny przed badaniem.
 </B>
-<B>Bardzo ważne: W przypadku badań w znieczuleniu dożylnym/ogólnym nie wolno jeść ani pić 4 godziny przed badaniem.</B>
-</BR></BR>
 
 </BR></BR>
 
