--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@ W przypadku badań w znieczuleniu dożylnym/ogólnym nie wolno jeść ani pić 4
 </B>
 </BR></BR>
 <h4>Preparat Eziclen</h4>
-				<B>I Dawka</B>
+				<h5>I Dawka</h5>
 			</BR></BR>
 
 
@@ -251,7 +251,7 @@ W przypadku badań w znieczuleniu dożylnym/ogólnym nie wolno jeść ani pić 4
 <LI>O godzinie 20.00-22.00 należy otworzyć jedna butelkę preparatu Eziclen i wlać ja do dołączonego kubka. Do kubka należy dodać wodę do poziomu zaznaczonej kreski. Następnie w ciągu 30-40 minut, bez specjalnego pośpiechu, należy wypić cały płyn z kubka. Następnie w ciągu kolejnej godziny, należy wypić jeszcze dwa kubki wypełnione niegazowaną wodą lub klarownym płynem do poziomu zaznaczonej kreski.</LI>
 
 
-<B>W dniu badania:</B>
+<h5>II Dawka</h5>
 </BR></BR>
 
 <P>Jeśli badanie jest planowane do godziny 15.00</P>
