--- a/index.html
+++ b/index.html
@@ -243,6 +243,8 @@ W przypadku badań w znieczuleniu dożylnym/ogólnym nie wolno jeść ani pić 4
 </B>
 </BR></BR>
 <h4>Preparat Eziclen</h4>
+	<p>
+		W dniu poprzedzającym badanie należy zjeść lekkie śniadanie, bez owoców, warzyw i pieczywa z ziarnami. Przez cały dzień poprzedzający badanie należy pić dużo klarownych płynów.
 <h5>I Dawka</h5>
 </p>
 
