--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@ W przypadku badań w znieczuleniu dożylnym/ogólnym nie wolno jeść ani pić 4
 <h5>I Dawka</h5>
 </p>
 
- godzinie 20.00-22.00 należy otworzyć jedna butelkę preparatu Eziclen i wlać ja do dołączonego kubka. Do kubka należy dodać wodę do poziomu zaznaczonej kreski. Następnie w ciągu 30-40 minut, bez specjalnego pośpiechu, należy wypić cały płyn z kubka. Następnie w ciągu kolejnej godziny, należy wypić jeszcze dwa kubki wypełnione niegazowaną wodą lub klarownym płynem do poziomu zaznaczonej kreski.
+O godzinie 20.00-22.00 należy otworzyć jedna butelkę preparatu Eziclen i wlać ja do dołączonego kubka. Do kubka należy dodać wodę do poziomu zaznaczonej kreski. Następnie w ciągu 30-40 minut, bez specjalnego pośpiechu, należy wypić cały płyn z kubka. Następnie w ciągu kolejnej godziny, należy wypić jeszcze dwa kubki wypełnione niegazowaną wodą lub klarownym płynem do poziomu zaznaczonej kreski.
 </p>
 
 <h5>II Dawka</h5>
@@ -257,16 +257,17 @@ W przypadku badań w znieczuleniu dożylnym/ogólnym nie wolno jeść ani pić 4
 <P>Jeśli badanie jest planowane do godziny 15.00</P>
 
 
-<LI>O godzinie 5.00-6.00 rano należy otworzyć drugą butelkę preparatu Eziclen i wlać ja do dołączonego kubka. Do kubka należy dodać wodę do poziomu zaznaczonej kreski. Następnie w ciągu 30-40 minut, bez specjalnego pośpiechu, należy wypić cały płyn z kubka. Następnie w ciągu kolejnej godziny, należy wypić jeszcze dwa kubki wypełnione niegazowaną wodą lub klarownym płynem do poziomu zaznaczonej kreski.</LI>
-<LI>Do dwóch godzin przed planowanym badaniem można pić dowolną ilość płynów niegazowanych i klarownych (także herbata, kawa bez mleka), można ssać landrynki.</LI>
+O godzinie 5.00-6.00 rano należy otworzyć drugą butelkę preparatu Eziclen i wlać ja do dołączonego kubka. Do kubka należy dodać wodę do poziomu zaznaczonej kreski. Następnie w ciągu 30-40 minut, bez specjalnego pośpiechu, należy wypić cały płyn z kubka. Następnie w ciągu kolejnej godziny, należy wypić jeszcze dwa kubki wypełnione niegazowaną wodą lub klarownym płynem do poziomu zaznaczonej kreski.
+Do dwóch godzin przed planowanym badaniem można pić dowolną ilość płynów niegazowanych i klarownych (także herbata, kawa bez mleka), można ssać landrynki.
 
 </p>
 <P>Jeśli badanie jest planowane po godzinie 15.00</P>
 
-<LI>O godzinie 9.00-10.00 rano należy otworzyć drugą butelkę preparatu Eziclen i wlać ja do dołączonego kubka. Do kubka należy dodać wodę do poziomu zaznaczonej kreski. Następnie w ciągu 30-40 minut, bez specjalnego pośpiechu, należy wypić cały płyn z kubka. Następnie w ciągu kolejnej godziny, należy wypić jeszcze dwa kubki wypełnione niegazowaną wodą lub klarownym płynem do poziomu zaznaczonej kreski.	</LI>
-<LI>Do dwóch godzin przed planowanym badaniem można pić dowolną ilość płynów niegazowanych i klarownych (także herbata, kawa bez mleka), można ssać landrynki.</LI>
+O godzinie 9.00-10.00 rano należy otworzyć drugą butelkę preparatu Eziclen i wlać ja do dołączonego kubka. Do kubka należy dodać wodę do poziomu zaznaczonej kreski. Następnie w ciągu 30-40 minut, bez specjalnego pośpiechu, należy wypić cały płyn z kubka. Następnie w ciągu kolejnej godziny, należy wypić jeszcze dwa kubki wypełnione niegazowaną wodą lub klarownym płynem do poziomu zaznaczonej kreski.
+Do dwóch godzin przed planowanym badaniem można pić dowolną ilość płynów niegazowanych i klarownych (także herbata, kawa bez mleka), można ssać landrynki.</LI>
 <p>
-Uwaga: W razie uczucia pragnienia nie należy ograniczać ilości spożywanych klarownych płynów zarówno w przeddzień jak i  w dniu badania. W przypadku nudności należy spowolnić przyjmowanie płynów.
+
+	Uwaga: W razie uczucia pragnienia nie należy ograniczać ilości spożywanych klarownych płynów zarówno w przeddzień jak i  w dniu badania. W przypadku nudności należy spowolnić przyjmowanie płynów.
 </p>
 <B>
 Bardzo ważne:
