--- a/index.html
+++ b/index.html
@@ -275,6 +275,35 @@ W przypadku badań w znieczuleniu dożylnym/ogólnym nie wolno jeść ani pić 4
 </BR>
 </B>
 </BR></BR>
+</p>
+</BR>
+<h4>Preparat Moviprep</h4>
+
+<p>
+
+W dniu poprzedzającym badanie należy zjeść lekkie śniadanie, bez owoców, warzyw i pieczywa z ziarnami. Przez cały dzień poprzedzający badanie należy pić dużo klarownych płynów.
+Dawkowanie preparatu Moviprep
+</p>
+<h5>I Dawka</h5>
+Pierwszą dawkę należy przyjąć pomiędzy godziną 20.00 a 22.00 w dniu poprzedzającym badanie. Rozpuść zawartość jednej saszetki A i jednej saszetki B w 1 litrze wody niegazowanej. Wymieszaj do całkowitego rozpuszczenia proszku. Wypij cały wymieszany płyn w ciągu 60 minut ( jedna szklanka co 15 minut)
+Wypij dodatkowo 1 litr wody przez kolejne 60 minut.
+</BR></BR>
+<h5>II Dawka</h5>
+Jeśli badanie planowane jest do godziny 15.00, to kolejną porcję leku należy wypić koło godziny 4.00-5.00 rano (w dniu kolonoskopii). Rozpuść zawartość jednej saszetki A i jednej saszetki B w 1 litrze wody niegazowanej. Wymieszaj do całkowitego rozpuszczenia proszku. Wypij cały wymieszany płyn w ciągu 60 minut ( jedna szklanka co 15 minut). Wypij dodatkowo 1 litr wody przez kolejne 60 minut.
+</BR></BR>
+Jeśli badanie planowane jest w godzinach popołudniowych, po 15.00  drugą dawkę preparatu i dwa litry płynów należy wypić około godziny 9-10 rano w dniu badania.
+</BR></BR>
+Uwaga: W razie uczucia pragnienia nie należy ograniczać ilości spożywanych klarownych płynów zarówno w przeddzień jak i  w dniu badania. W przypadku nudności należy spowolnić przyjmowanie płynów.
+</p>
+</p>
+<B>
+Bardzo ważne:
+W przypadku badań w znieczuleniu dożylnym/ogólnym nie wolno jeść ani pić 4 godziny przed badaniem.
+</B>
+
+</BR></BR>
+
+
 <h4>Preparat Citrafleet</h4>
 
 <p>
