--- a/index.html
+++ b/index.html
@@ -330,7 +330,9 @@ W przypadku badań w znieczuleniu dożylnym/ogólnym nie wolno jeść ani pić 4
 
 </B>
 </BR></BR>
-</B><h4>Sposób przygotowania do gastroskopii</h4></B>
+</B>
+<h4>Sposób przygotowania do gastroskopii</h4>
+</B>
 
 <p>Na badanie należy zabrać z sobą poprzednie wyniki badań endoskopowych. Należy być na czczo (6 godnin przed badaniem bez jedzenia i bez picia)
 </p>
