--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 
 						<div class="row-fluid">
 
-<h3>Sposób przygotowania do kolonoskopii</h3>
+ALIGN=center<h3>Sposób przygotowania do kolonoskopii</h3>
 
 <h4>Zasady Ogólne</h4>
 <p>Na badanie należy zabrać z sobą poprzednie wyniki badań endoskopowych, aktualne wyniki badań dodatkowych (w szczególności badanie morfologii krwi, INR, poziomy elektrolitów we krwi).
