--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ ALIGN=center<h3>Sposób przygotowania do kolonoskopii</h3>
 <h3>JEŚLI BADANIE PRZEPROWADZONE JEST W ZNIECZULENIU TO NIE WOLNO PROWADZIĆ POJAZDÓW MECHANICZNYCH PRZEZ NASTĘPNE 12 GODZIN! Konieczna osoba towarzysząca przy powrocie do domu.<h3>
 </p>
 </BR>
-<h4>Preparat Clensia</h4>
+<h2>Clensia</h2>
 
 <p>
 
@@ -222,7 +222,7 @@ W przypadku badań w znieczuleniu dożylnym/ogólnym nie wolno jeść ani pić 4
 </BR></BR>
 
 
-<h4>Preparat Fortrans</h4>
+<h4>Fortrans</h4>
 	<p>
 		W dniu poprzedzającym badanie należy zjeść lekkie śniadanie, bez owoców, warzyw i pieczywa z ziarnami. Przez cały dzień poprzedzający badanie należy pić dużo klarownych płynów.
 
@@ -242,7 +242,7 @@ Bardzo ważne:
 W przypadku badań w znieczuleniu dożylnym/ogólnym nie wolno jeść ani pić 4 godziny przed badaniem.
 </B>
 </BR></BR>
-<h4>Preparat Eziclen</h4>
+<h4>Eziclen</h4>
 	<p>
 		W dniu poprzedzającym badanie należy zjeść lekkie śniadanie, bez owoców, warzyw i pieczywa z ziarnami. Przez cały dzień poprzedzający badanie należy pić dużo klarownych płynów.
 </p>
@@ -277,7 +277,7 @@ W przypadku badań w znieczuleniu dożylnym/ogólnym nie wolno jeść ani pić 4
 </BR></BR>
 </p>
 </BR>
-<h4>Preparat Moviprep</h4>
+<h4>Moviprep</h4>
 
 <p>
 
@@ -304,7 +304,7 @@ W przypadku badań w znieczuleniu dożylnym/ogólnym nie wolno jeść ani pić 4
 </BR></BR>
 
 
-<h4>Preparat Citrafleet</h4>
+<h4>Citrafleet</h4>
 
 <p>
 
