--- a/index.html
+++ b/index.html
@@ -177,9 +177,9 @@
 
 						<div class="row-fluid">
 
-ALIGN=center<h3>Sposób przygotowania do kolonoskopii</h3>
+<h3>Sposób przygotowania do kolonoskopii</h3>
 
-<h4>Zasady Ogólne</h4>
+<h4>Zasady Ogólne - niezależne od wyboru środka przeczyszczającego</h4>
 <p>Na badanie należy zabrać z sobą poprzednie wyniki badań endoskopowych, aktualne wyniki badań dodatkowych (w szczególności badanie morfologii krwi, INR, poziomy elektrolitów we krwi).
 </p>
 
