--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 
 <h3>Sposób przygotowania do kolonoskopii</h3>
 
-<h4>Zasady Ogólne - niezależne od wyboru preparatu</h4>
+<h4>Zasady ogólne niezależne od wyboru preparatu</h4>
 <p>Na badanie należy zabrać z sobą poprzednie wyniki badań endoskopowych, aktualne wyniki badań dodatkowych (w szczególności badanie morfologii krwi, INR, poziomy elektrolitów we krwi).
 </p>
 
