--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@ W przypadku badań w znieczuleniu dożylnym/ogólnym nie wolno jeść ani pić 4
 
 										<div>Telefony:</div>
 
-										<B>22 735 00 37 lub 604 131 560<B>
+										<B>22 735 00 37, 22 735 00 36, 604 121 560 lub 604 131 560<B>
 										</div>
 
 
