--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@ Pierwszą dawkę należy przyjąć pomiędzy godziną 20.00 a 22.00 w dniu poprz
 <h5>II Dawka</h5>
 Jeśli badanie planowane jest do godziny 15.00, to kolejną porcję leku należy wypić koło godziny 4.00-5.00 rano (w dniu kolonoskopii), przygotowując ją jak dawkę wieczorną. Wypij dodatkowo 1 litr wody przez kolejne 60 minut
 </BR></BR>
-Jeśli badanie planowane jest w godzinach popołudniowych, po 15.00  drugą dawkę preparatu i dwa litry płynów należy wypić około godziny 9-10 rano w dniu badania.
+Jeśli badanie planowane jest w godzinach popołudniowych, pierwszą i drugą dawkę leku należy wypić w dniu badania. Pierwszą o 7.00 rano, a drugą należy wypić około godziny 12.00. 
 </BR></BR>
 Uwaga: W razie uczucia pragnienia nie należy ograniczać ilości spożywanych klarownych płynów zarówno w przeddzień jak i  w dniu badania. W przypadku nudności należy spowolnić przyjmowanie płynów.
 </p>
