--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@ Od godziny 20.00 należy rozpocząć picie pierwszej dawki, 2 litrów przygotowa
 <h5>II Dawka</h5> (Kolejne dwa litry roztworu Fortransu)</BR></BR>
 Jeśli badanie planowane jest do godziny 15.00, to kolejną porcję dwóch litrów należy wypić koło godziny 4.00-5.00 rano ( w dniu kolonoskopii), przygotowując ją jak dawkę wieczorną.
 
-Jeśli badanie planowane jest w godzinach popołudniowych, po 15.00  drugą dawkę preparatu, dwie saszetki rozpuszczone w dwóch litrach płynów,  należy wypić około godziny 9.00 rano w dniu badania.
+Jeśli badanie planowane jest w godzinach popołudniowych, pierwszą i drugą dawkę leku należy wypić w dniu badania. Pierwszą o 7.00 rano, a drugą należy wypić około godziny 12.00.
 </BR></BR>
 Uwaga: W razie uczucia pragnienia nie należy ograniczać ilości spożywanych klarownych płynów zarówno w przeddzień jak i  w dniu badania. W przypadku nudności należy spowolnić przyjmowanie płynów.
 
