--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@ Wypij dodatkowo 1 litr wody przez kolejne 60 minut.
 <h5>II Dawka</h5>
 Jeśli badanie planowane jest do godziny 15.00, to kolejną porcję leku należy wypić koło godziny 4.00-5.00 rano (w dniu kolonoskopii). Rozpuść zawartość jednej saszetki A i jednej saszetki B w 1 litrze wody niegazowanej. Wymieszaj do całkowitego rozpuszczenia proszku. Wypij cały wymieszany płyn w ciągu 60 minut ( jedna szklanka co 15 minut). Wypij dodatkowo 1 litr wody przez kolejne 60 minut.
 </BR></BR>
-Jeśli badanie planowane jest w godzinach popołudniowych, po 15.00  drugą dawkę preparatu i dwa litry płynów należy wypić około godziny 9-10 rano w dniu badania.
+Jeśli badanie planowane jest w godzinach popołudniowych, pierwszą i drugą dawkę leku należy wypić w dniu badania. Pierwszą o 7.00 rano, a drugą należy wypić około godziny 12.00.
 </BR></BR>
 Uwaga: W razie uczucia pragnienia nie należy ograniczać ilości spożywanych klarownych płynów zarówno w przeddzień jak i  w dniu badania. W przypadku nudności należy spowolnić przyjmowanie płynów.
 </p>
@@ -318,7 +318,7 @@ Pierwszą dawkę należy przyjąć pomiędzy godziną 20.00 a 22.00 w dniu poprz
 Jeśli badanie planowane jest do godziny 15.00, to kolejną porcję leku należy wypić koło godziny 4.00-5.00 rano (w dniu kolonoskopii), przygotowując ją jak dawkę wieczorną. Potem trzeba wypić jeszcze kolejne dwa litry klarownych płynów.
 </BR></BR>
 Uwaga: Bez wypicia w sumie mniej jak 4 litry płynów istnieje bardzo duże ryzyko złego oczyszczenia jelita.
-Jeśli badanie planowane jest w godzinach popołudniowych, po 15.00  drugą dawkę preparatu i dwa litry płynów należy wypić około godziny 9-10 rano w dniu badania.
+Jeśli badanie planowane jest w godzinach popołudniowych, pierwszą i drugą dawkę leku należy wypić w dniu badania. Pierwszą o 7.00 rano, a drugą należy wypić około godziny 12.00.
 </BR></BR>
 Uwaga: W razie uczucia pragnienia nie należy ograniczać ilości spożywanych klarownych płynów zarówno w przeddzień jak i  w dniu badania. W przypadku nudności należy spowolnić przyjmowanie płynów.
 
