--- a/index.html
+++ b/index.html
@@ -261,11 +261,9 @@ O godzinie 5.00-6.00 rano należy otworzyć drugą butelkę preparatu Eziclen i 
 Do dwóch godzin przed planowanym badaniem można pić dowolną ilość płynów niegazowanych i klarownych (także herbata, kawa bez mleka), można ssać landrynki.
 
 </p>
-<P>Jeśli badanie jest planowane po godzinie 15.00</P>
+<P>Jeśli badanie planowane jest w godzinach popołudniowych, pierwszą i drugą dawkę leku należy wypić w dniu badania. Pierwszą o 7.00 rano, a drugą należy wypić około godziny 12.00.
+</P>
 
-O godzinie 9.00-10.00 rano należy otworzyć drugą butelkę preparatu Eziclen i wlać ja do dołączonego kubka. Do kubka należy dodać wodę do poziomu zaznaczonej kreski. Następnie w ciągu 30-40 minut, bez specjalnego pośpiechu, należy wypić cały płyn z kubka. Następnie w ciągu kolejnej godziny, należy wypić jeszcze dwa kubki wypełnione niegazowaną wodą lub klarownym płynem do poziomu zaznaczonej kreski.
-Do dwóch godzin przed planowanym badaniem można pić dowolną ilość płynów niegazowanych i klarownych (także herbata, kawa bez mleka), można ssać landrynki.</LI>
-<p>
 
 	Uwaga: W razie uczucia pragnienia nie należy ograniczać ilości spożywanych klarownych płynów zarówno w przeddzień jak i  w dniu badania. W przypadku nudności należy spowolnić przyjmowanie płynów.
 </p>
@@ -291,8 +289,8 @@ Wypij dodatkowo 1 litr wody przez kolejne 60 minut.
 <h5>II Dawka</h5>
 Jeśli badanie planowane jest do godziny 15.00, to kolejną porcję leku należy wypić koło godziny 4.00-5.00 rano (w dniu kolonoskopii). Rozpuść zawartość jednej saszetki A i jednej saszetki B w 1 litrze wody niegazowanej. Wymieszaj do całkowitego rozpuszczenia proszku. Wypij cały wymieszany płyn w ciągu 60 minut ( jedna szklanka co 15 minut). Wypij dodatkowo 1 litr wody przez kolejne 60 minut.
 </BR></BR>
-Jeśli badanie planowane jest w godzinach popołudniowych, pierwszą i drugą dawkę leku należy wypić w dniu badania. Pierwszą o 7.00 rano, a drugą należy wypić około godziny 12.00.
-</BR></BR>
+<P>Jeśli badanie planowane jest w godzinach popołudniowych, pierwszą i drugą dawkę leku należy wypić w dniu badania. Pierwszą o 7.00 rano, a drugą należy wypić około godziny 12.00.
+</P></BR></BR>
 Uwaga: W razie uczucia pragnienia nie należy ograniczać ilości spożywanych klarownych płynów zarówno w przeddzień jak i  w dniu badania. W przypadku nudności należy spowolnić przyjmowanie płynów.
 </p>
 </p>
@@ -315,8 +313,8 @@ Dawkowanie preparatu Citrafleet
 Pierwszą dawkę należy przyjąć pomiędzy godziną 20.00 a 22.00 w dniu poprzedzającym badanie. Należy wsypać zawartość saszetki do około 150 ml zimnej wody i wymieszać. Po wypiciu przygotowanego preparatu, dodatkowo trzeba wypić jeszcze 2 litry klarownych płynów.
 </BR></BR>
 <h5>II Dawka</h5>
-Jeśli badanie planowane jest do godziny 15.00, to kolejną porcję leku należy wypić koło godziny 4.00-5.00 rano (w dniu kolonoskopii), przygotowując ją jak dawkę wieczorną. Potem trzeba wypić jeszcze kolejne dwa litry klarownych płynów.
-</BR></BR>
+<P>Jeśli badanie planowane jest w godzinach popołudniowych, pierwszą i drugą dawkę leku należy wypić w dniu badania. Pierwszą o 7.00 rano, a drugą należy wypić około godziny 12.00.
+</P></BR></BR>
 Uwaga: Bez wypicia w sumie mniej jak 4 litry płynów istnieje bardzo duże ryzyko złego oczyszczenia jelita.
 Jeśli badanie planowane jest w godzinach popołudniowych, pierwszą i drugą dawkę leku należy wypić w dniu badania. Pierwszą o 7.00 rano, a drugą należy wypić około godziny 12.00.
 </BR></BR>
