--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@ Pierwszą dawkę należy przyjąć pomiędzy godziną 20.00 a 22.00 w dniu poprz
 <h5>II Dawka</h5>
 Jeśli badanie planowane jest do godziny 15.00, to kolejną porcję leku należy wypić koło godziny 4.00-5.00 rano (w dniu kolonoskopii), przygotowując ją jak dawkę wieczorną. Wypij dodatkowo 1 litr wody przez kolejne 60 minut
 </BR></BR>
-Jeśli badanie planowane jest w godzinach popołudniowych, pierwszą i drugą dawkę leku należy wypić w dniu badania. Pierwszą o 7.00 rano, a drugą należy wypić około godziny 12.00. 
+Jeśli badanie planowane jest w godzinach popołudniowych, pierwszą i drugą dawkę leku należy wypić w dniu badania. Pierwszą o 7.00 rano, a drugą około godziny 12.00. 
 </BR></BR>
 Uwaga: W razie uczucia pragnienia nie należy ograniczać ilości spożywanych klarownych płynów zarówno w przeddzień jak i  w dniu badania. W przypadku nudności należy spowolnić przyjmowanie płynów.
 </p>
@@ -232,7 +232,7 @@ Od godziny 20.00 należy rozpocząć picie pierwszej dawki, 2 litrów przygotowa
 <h5>II Dawka</h5> (Kolejne dwa litry roztworu Fortransu)</BR></BR>
 Jeśli badanie planowane jest do godziny 15.00, to kolejną porcję dwóch litrów należy wypić koło godziny 4.00-5.00 rano ( w dniu kolonoskopii), przygotowując ją jak dawkę wieczorną.
 
-Jeśli badanie planowane jest w godzinach popołudniowych, pierwszą i drugą dawkę leku należy wypić w dniu badania. Pierwszą o 7.00 rano, a drugą należy wypić około godziny 12.00.
+Jeśli badanie planowane jest w godzinach popołudniowych, pierwszą i drugą dawkę leku należy wypić w dniu badania. Pierwszą o 7.00 rano, a drugą około godziny 12.00.
 </BR></BR>
 Uwaga: W razie uczucia pragnienia nie należy ograniczać ilości spożywanych klarownych płynów zarówno w przeddzień jak i  w dniu badania. W przypadku nudności należy spowolnić przyjmowanie płynów.
 
@@ -261,7 +261,7 @@ O godzinie 5.00-6.00 rano należy otworzyć drugą butelkę preparatu Eziclen i 
 Do dwóch godzin przed planowanym badaniem można pić dowolną ilość płynów niegazowanych i klarownych (także herbata, kawa bez mleka), można ssać landrynki.
 
 </p>
-<P>Jeśli badanie planowane jest w godzinach popołudniowych, pierwszą i drugą dawkę leku należy wypić w dniu badania. Pierwszą o 7.00 rano, a drugą należy wypić około godziny 12.00.
+<P>Jeśli badanie planowane jest w godzinach popołudniowych, pierwszą i drugą dawkę leku należy wypić w dniu badania. Pierwszą o 7.00 rano, a drugą około godziny 12.00.
 </P>
 
 
@@ -316,7 +316,7 @@ Pierwszą dawkę należy przyjąć pomiędzy godziną 20.00 a 22.00 w dniu poprz
 <P>Jeśli badanie planowane jest w godzinach popołudniowych, pierwszą i drugą dawkę leku należy wypić w dniu badania. Pierwszą o 7.00 rano, a drugą należy wypić około godziny 12.00.
 </P></BR></BR>
 Uwaga: Bez wypicia w sumie mniej jak 4 litry płynów istnieje bardzo duże ryzyko złego oczyszczenia jelita.
-Jeśli badanie planowane jest w godzinach popołudniowych, pierwszą i drugą dawkę leku należy wypić w dniu badania. Pierwszą o 7.00 rano, a drugą należy wypić około godziny 12.00.
+Jeśli badanie planowane jest w godzinach popołudniowych, pierwszą i drugą dawkę leku należy wypić w dniu badania. Pierwszą o 7.00 rano, a drugą około godziny 12.00.
 </BR></BR>
 Uwaga: W razie uczucia pragnienia nie należy ograniczać ilości spożywanych klarownych płynów zarówno w przeddzień jak i  w dniu badania. W przypadku nudności należy spowolnić przyjmowanie płynów.
 
