--- a/index.html
+++ b/index.html
@@ -316,8 +316,9 @@ Pierwszą dawkę należy przyjąć pomiędzy godziną 20.00 a 22.00 w dniu poprz
 <P>Jeśli badanie planowane jest w godzinach popołudniowych, pierwszą i drugą dawkę leku należy wypić w dniu badania. Pierwszą o 7.00 rano, a drugą należy wypić około godziny 12.00.
 </P></BR></BR>
 Uwaga: Bez wypicia w sumie mniej jak 4 litry płynów istnieje bardzo duże ryzyko złego oczyszczenia jelita.
-Jeśli badanie planowane jest w godzinach popołudniowych, pierwszą i drugą dawkę leku należy wypić w dniu badania. Pierwszą o 7.00 rano, a drugą około godziny 12.00.
-</BR></BR>
+</p>
+<P>Jeśli badanie planowane jest w godzinach popołudniowych, pierwszą i drugą dawkę leku należy wypić w dniu badania. Pierwszą o 7.00 rano, a drugą około godziny 12.00.
+</P></BR></BR>
 Uwaga: W razie uczucia pragnienia nie należy ograniczać ilości spożywanych klarownych płynów zarówno w przeddzień jak i  w dniu badania. W przypadku nudności należy spowolnić przyjmowanie płynów.
 
 </BR></BR>
